--- a/website.html
+++ b/website.html
@@ -1,6 +1,32 @@
 <head>
     <body>
-        <h1>Hello world! This is Dhruv Chopra</h1>
-        <h1>Now Give me job</h1>
+
+        <div id="main_text">
+            Hello world! <br>
+            This is <span id="name">Dhruv Chopra</span> <br>
+            Now Give me job
+        </div>
+        
     </body>
+    <style>
+        body{
+            padding: 30px;
+            background-color: rgb(0, 0, 0);
+            color: rgb(255, 255, 255);
+        }
+        #main_text{
+            font-size: 80px;
+            font-weight: 500 ;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 70%;
+        }
+        #name{
+            font-size: 100px;
+            color: red;
+        }
+    </style>
 </head>
+
