--- a/website.html
+++ b/website.html
@@ -4,7 +4,7 @@
         <div id="main_text">
             Hello world! <br>
             This is <span id="name">Dhruv Chopra</span> <br>
-            Now Give me job
+            Now Give me job. Please na.
         </div>
         
     </body>
