--- a/website.html
+++ b/website.html
@@ -1,6 +1,6 @@
 <head>
     <title>Dhruv Chopra</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
     <body>
 
         <div id="main_text">
