moved all logos to a folder named logos

--- a/website.html
+++ b/website.html
@@ -11,16 +11,16 @@
 
             <div id = "info">
                 <div id = "gitlogo" >
-                    <img src="25231.png" alt="gitlogo" width = "40">
+                    <img src="logos/25231.png" alt="gitlogo" width = "40">
                 </div>
                 <div id = "linkedin" >
-                    <img src="linkedin.png" alt="linkedin" width = "57">
+                    <img src="logos/linkedin.png" alt="linkedin" width = "57">
                 </div>
                 <div id = "hackerrank" >
-                    <img src="hackerarnk.png" alt="hackerrank" width = "80">
+                    <img src="logos/hackerarnk.png" alt="hackerrank" width = "80">
                 </div>
                 <div id = "leetcode" >
-                    <img src="leetcode.png" alt="leetcode" width = "50">
+                    <img src="logos/leetcode.png" alt="leetcode" width = "50">
                 </div>
             </div>
 
