fixed the alignment in schools division

--- a/website.html
+++ b/website.html
@@ -117,7 +117,7 @@
         
         </div>
         
-        <div id = "FrameWorks">
+        <div id = "misc">
             <h2 style="color:red;margin-left: -40;">$School</h2>
             >>From: 2006 To: 2021<br>
             >>ISC (12th) | 2021: 92%<br>
