Added link to github logo in NIDS project

--- a/website.html
+++ b/website.html
@@ -10,7 +10,7 @@
             </div>
             <div id = "info">
                 <div id = "gitlogo" >
-                    
+
                     <a href = "https://www.github.com/thisisdhruvchopra" target = "_blank">
                         <img src="logos/25231.png" alt="gitlogo" width = "40">
                     </a>
@@ -58,7 +58,12 @@
         <h2 style="text-align:center; letter-spacing: 10;">Projects</h2>
         <hr>
         <div id="project_1">
-            <h2 style = "color: red;margin-left: 45;">$Network Intrusion Detection System <span style = "color:white;font-size: small;"> 2022</span></h2> 
+            <h2 style = "color: red;margin-left: 45;">$Network Intrusion Detection System
+                <span style = "color:white;font-size: small;"> 2022</span>
+                <a href = "https://www.github.com/thisisdhruvchopra/NIDS" target = "_blank">
+                    <img src="logos/25231.png" alt="gitlogo" width = "20">
+                </a>
+            </h2> 
             
             <p style = "margin-left: 80; margin-right: 80;">
                 >>The primary objective of the project was to enhance the security of <br>
