--- a/website.html
+++ b/website.html
@@ -1,4 +1,13 @@
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RFNZYX4XFR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RFNZYX4XFR');
+</script>
     <title>Dhruv Chopra</title>
     <link rel="stylesheet" href="Style.css">
     <body>
