Changed UI color scheme

--- a/website.html
+++ b/website.html
@@ -10,7 +10,8 @@
 </script>
     <title>Dhruv Chopra</title>
     <link rel="stylesheet" href="Style.css">
-    <body>
+    <body style="background-color: white;">
+        
         <div  id = "Header">
 
             <div id="main_text">
