--- a/website.html
+++ b/website.html
@@ -2,6 +2,9 @@
     <title>Dhruv Chopra</title>
     <link rel="stylesheet" href="Style.css">
     <body>
+        <div id="particles-js"></div>
+        <script src="Particles/particles.js"></script>
+        <script src="Particles/demo/js/app.js"></script>
         <div  id = "Header">
 
             <div id="main_text">
@@ -177,6 +180,7 @@
         <div  style="text-align:center; font-size: medium; font-style: italic;">
             <a href = "mailto: thisisdhruvchopra.com">Dhruv Chopra - thisisdhruvchopra@gmail.com</a>
         </div>
+
    
     </body>
 
