--- a/website.html
+++ b/website.html
@@ -102,7 +102,7 @@
 
         <hr>
         <h2 style = "color: red;margin-left: 45;">$Upcoming Internship
-            <span style = "color:white;font-size: small;"> 2024-2023</span>
+            <span style = "color:white;font-size: small;"> February 2024 - July 2024</span>
             <a href = "https://c3ihub.org/" target = "_blank">
                 <span id = "nidsgit">
                     <img src="logos/c3i.svg" alt="c3iLogo" width = "40">
