--- a/website.html
+++ b/website.html
@@ -227,7 +227,7 @@
         <br><br>
 
         <div  style="text-align:center; font-size: medium; font-style: italic;">
-            <a href = "mailto: thisisdhruvchopra.com">Dhruv Chopra - thisisdhruvchopra@gmail.com</a>
+            <a href = "mailto: thisisdhruvchopra.com" target = "_blank">Dhruv Chopra - thisisdhruvchopra@gmail.com</a>
         </div>
 
         <br>
