--- a/index.html
+++ b/index.html
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <link rel="icon" type="icon" href="logos/icon.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link
-      href= 
-"https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity= 
-"sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-      crossorigin="anonymous"
-    /> 
-    <link rel="stylesheet"
-          href="style.css" /> 
-    <link rel="preconnect" 
-          href="https://fonts.gstatic.com" /> 
-    <link
-      href= 
-"https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
-      rel="stylesheet"
-    /> 
-    
+    <link rel="icon" type="icon" href="logos/icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"/> 
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" /> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet" /> 
     <title>Dhruv Chopra</title>
-    
 </head>
 
 <body>
@@ -150,7 +133,7 @@ I am also preparing for a role as a DevOps Engineer, where I aim to leverage my 
                 :and comprehensive documentation to enhance network security.
                 <br><br>
                 <div>
-                    #Technology Used:<br><br>
+                #Technology Used:<br><br>
                 >>WireShark<br>
                 >>Zeek<br>
                 >>Kibana<br>
