--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <embed src="Resume.pdf" type="application/pdf">
+    <embed src="DhruvResumeJuly.pdf" type="application/pdf">
 </body>
 </html>
